--- a/Hangman/index.html
+++ b/Hangman/index.html
@@ -4,13 +4,13 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Hangman</title>
-        <link href="hangman.css" rel="stylesheet">
+        <link href="data/hangman.css" rel="stylesheet">
     </head>
     <body>
         <div id="hangmanPics"></div>
         <div id="word"></div>
         <input placeholder="Buchstaben eingeben" id="letter" maxlength="1">
         <div id="message"></div>
-        <script type="text/javascript" src="hangman.js"></script>
+        <script type="text/javascript" src="data/hangman.js"></script>
     </body>
 </html>
